# variant_task

./: CMakeLists.txt  README.md  main.cpp  variant.h  variant_construct_assign_layer.h  variant_destroy_layer.h  variant_helper.h  variant_storage.h
